--- a/index.html
+++ b/index.html
@@ -7,13 +7,14 @@
         <title>Мой сайт по дота 2</title>
     </head>
     <body>
-        <h1 class="key">ЧЕ БИЧЯРЫ САСИТЕ БИБУ</h1>
+        <h1 class="key">ХАХАХАХАХАХАХАХАХА</h1>
         <img src="images/d2-logo.png" alt="Логотип дока2">
         <p id="jir">ЛЯ ЛЯ ЛЯ Я ВР ЕБАШУ на 3 ПОЗИЦИИ</p>
         <ul>
             <li>ЛОМАЮ ШМОТ</li>
             <li>СТАЮ В ТАЛИК</li>
             <li>ФИЖУ ПА КД</li>
+            <li>ИДУ В ЛЕС</li>
         </ul>
         <p>и так далее , можете посетить мой <a href="https://dotabuff.com">дота бафф</a></p>
         <button>Сменить Пользователя</button>
